--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
 <!-- Open Graph / Preview Card -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು | ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ">
+<meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು <br>ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ"</br>>
 <meta property="og:description" content="ನಮ್ಮ ಪೂಜ್ಯ ಮಾತೃಶ್ರೀ ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ ಅವರ ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ವಿವರಗಳು.">
-<meta property="og:image" content="https://yourusername.github.io/profile.jpg">
+<meta property="og:image" content="profile.jpg">
 <meta property="og:url" content="https://yourusername.github.io/">
 <meta property="og:site_name" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು">
+
 
 <style>
 body{
@@ -220,3 +221,4 @@ td{
 
 </body>
 </html>
+
