--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-<!-- Open Graph / Preview Card -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು <br>ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ"</br>>
-<meta property="og:description" content="ನಮ್ಮ ಪೂಜ್ಯ ಮಾತೃಶ್ರೀ ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ ಅವರ ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ವಿವರಗಳು.">
-<meta property="og:image" content="profile.jpg">
-<meta property="og:url" content="https://yourusername.github.io/">
-<meta property="og:site_name" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು <br> ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ </br>">
+<meta name="twitter:description" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ಸಂಕ್ಷಿಪ್ತ ಮಾಹಿತಿ.">
+<meta name="twitter:image" content="https://ixashu94.github.io/profile.jpg">
 
 
 <style>
@@ -221,4 +218,5 @@ td{
 
 </body>
 </html>
+
 
