Enhance index.html with Open Graph metadata
Added Open Graph meta tags for better social media integration.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು <br> ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ </br>">
-<meta name="twitter:description" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ಸಂಕ್ಷಿಪ್ತ ಮಾಹಿತಿ.">
-<meta name="twitter:image" content="https://ixashu94.github.io/profile.jpg">
+<!-- Open Graph Preview -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು | ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ">
+<meta property="og:description" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ದಿನಾಂಕ, ಸಮಯ ಮತ್ತು ಸ್ಥಳ ಮಾಹಿತಿ.">
+<meta property="og:image" content="https://ixashu94.github.io/sample/profile.jpg">
+<meta property="og:url" content="https://ixashu94.github.io/sample/">
+
 
 
 <style>
@@ -218,5 +221,6 @@ td{
 
 </body>
 </html>
+
 
 
