Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- Open Graph Preview -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು | ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ">
+<meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು <br>ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ</br>">
 <meta property="og:description" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ದಿನಾಂಕ, ಸಮಯ ಮತ್ತು ಸ್ಥಳ ಮಾಹಿತಿ.">
 <meta property="og:image" content="https://ixashu94.github.io/sample/profile.jpg">
 <meta property="og:url" content="https://ixashu94.github.io/sample/">
@@ -221,6 +221,7 @@ td{
 
 </body>
 </html>
+
 
 
 
