--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು | ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ">
 <meta property="og:description" content="ನಮ್ಮ ಪೂಜ್ಯ ಮಾತೃಶ್ರೀ ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ ಅವರ ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ಸಂಕ್ಷಿಪ್ತ ಮಾಹಿತಿ.">
-<meta property="og:image" content="https://ixashu94.github.io/profile.jpg">
-<meta property="og:url" content="https://ixashu94.github.io/">
+<meta property="og:image" content="https://ixashu94.github.io/sample/profile.jpg">
+<meta property="og:url" content="https://ixashu94.github.io/sample">
 <meta property="og:site_name" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು">
 
 <!-- WhatsApp needs this -->
@@ -226,6 +226,7 @@ td{
 
 </body>
 </html>
+
 
 
 
