--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 <title>ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- WhatsApp / Open Graph Preview Card -->
+<!-- WhatsApp / Open Graph Preview -->
 <meta property="og:type" content="website">
 <meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು | ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ">
 <meta property="og:description" content="ನಮ್ಮ ಪೂಜ್ಯ ಮಾತೃಶ್ರೀ ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ ಅವರ ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ಸಂಕ್ಷಿಪ್ತ ಮಾಹಿತಿ.">
 <meta property="og:image" content="https://ixashu94.github.io/sample/profile.jpg">
-<meta property="og:url" content="https://ixashu94.github.io/sample">
+<meta property="og:url" content="https://ixashu94.github.io/sample/">
 <meta property="og:site_name" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು">
 
-<!-- WhatsApp needs this -->
+<!-- WhatsApp support -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="https://ixashu94.github.io/profile.jpg">
+<meta name="twitter:image" content="https://ixashu94.github.io/sample/profile.jpg">
+
 
 
 
@@ -226,6 +227,7 @@ td{
 
 </body>
 </html>
+
 
 
 
