--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 <title>ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- WhatsApp / Open Graph Preview -->
+<!-- WhatsApp / Open Graph Preview (FINAL) -->
 <meta property="og:type" content="website">
 <meta property="og:title" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು | ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ">
-<meta property="og:description" content="ನಮ್ಮ ಪೂಜ್ಯ ಮಾತೃಶ್ರೀ ದಿ|| ಶ್ರೀಮತಿ ನಾಗರತ್ನ ಅವರ ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ಸಂಕ್ಷಿಪ್ತ ಮಾಹಿತಿ.">
-<meta property="og:image" content="https://ixashu94.github.io/sample/profile.jpg">
+<meta property="og:description" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳ ದಿನಾಂಕ, ಸಮಯ ಮತ್ತು ಸ್ಥಳ ವಿವರಗಳು.">
+<meta property="og:image" content="https://ixashu94.github.io/sample/preview.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 <meta property="og:url" content="https://ixashu94.github.io/sample/">
 <meta property="og:site_name" content="ಉತ್ತರಕ್ರಿಯಾದಿ ಕಾರ್ಯಕ್ರಮಗಳು">
 
-<!-- WhatsApp support -->
-<meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="https://ixashu94.github.io/sample/profile.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://ixashu94.github.io/sample/preview.jpg">
 
 
 
@@ -227,6 +228,7 @@ td{
 
 </body>
 </html>
+
 
 
 
